--- a/CSS Flexbox на каждый день/07. Выравнивание по основной оси — justify-content/style.css
+++ b/CSS Flexbox на каждый день/07. Выравнивание по основной оси — justify-content/style.css
@@ -3,6 +3,10 @@
   height: 600px;
   background-color: #ccc;
   display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  justify-content: space-around;
+  justify-content: space-evenly;
   gap: 10px;
 }
 
@@ -10,4 +14,47 @@
   background-color: beige;
   width: 100px;
   height: 100px;
+}
+
+div,
+main,
+aside {
+  box-sizing: border-box;
+}
+.center {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+.content {
+  display: flex;
+  max-width: 1140px;
+
+  /* margin: 0 auto; */
+}
+
+main {
+  width: 70%;
+  background-color: #ccc;
+  padding: 30px;
+}
+
+aside {
+  width: 30%;
+  background-color: bisque;
+}
+
+@media (max-width: 480px) {
+  .content {
+    flex-direction: column;
+  }
+
+  main {
+    width: 100%;
+    padding: 20px;
+  }
+
+  aside {
+    width: 100%;
+  }
 }
