--- a/CSS Flexbox на каждый день/18. Горизонтальная форма CF7/style.css
+++ b/CSS Flexbox на каждый день/18. Горизонтальная форма CF7/style.css
@@ -1,68 +1,142 @@
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-  background: #f5f5f5;
-  font-family: Arial, sans-serif;
+.container {
+  width: 70%;
+  /* height: 100vh; */
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  background: rgb(190, 220, 238);
 }
-
-/* ....................................... */
-form {
-  display: flex;
-  align-items: center;
-  background-color: rgb(214, 230, 230);
-}
-
-/*Типа контейнер*/
-.horizontalForm {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-
-  row-gap: 15px;
-}
-
-/* Поля*/
 
 .horizontalField {
+  height: 100px;
+  align-items: center;
+  width: 100%;
+  display: flex;
+  column-gap: 2%;
+  justify-content: center;
+  align-items: flex-end;
+  padding-bottom: 50px;
+  /* column-gap: 10px; */
+  /* flex-wrap: wrap; */
+}
+
+.name_div {
+  width: 37%;
   display: flex;
   flex-direction: column;
-  width: 35%;
-  padding-right: calc(20px / 2);
-  padding-left: calc(20px / 2);
+  /* padding-right: calc(20px / 2); */
+  /* padding-left: calc(20px / 2); */
 }
 
-/* .horizontalField label {
-  flex-basis: 100%;
-} */
+.input {
+  height: 30px;
+  width: 100%;
+}
 
-/* Кнопка */
-.formSubmit {
+.email_dev {
+  width: 37%;
+  display: flex;
+  flex-direction: column;
+  /* padding-right: calc(20px / 2); */
+  /* padding-left: calc(20px / 2); */
+}
+
+.button_div {
   display: flex;
   width: 20%;
-  margin-top: 15px;
-  /* left: 40px; */
-  padding-right: calc(20px / 2);
-  padding-left: calc(20px / 2);
+  /* margin-top: 20px; */
+  /* justify-content: center; */
+  height: 38px;
 }
-@media (max-width: 600px) {
-  .horizontalForm {
+.button {
+  height: 100%;
+  width: 100%;
+}
+
+.checkbox_div {
+  /* display: flex; */
+}
+
+@media (max-width: 1024px) {
+  .container {
+    width: 80%;
+
+    /* margin-top: 10%; */
+    /* margin-left: auto; */
+    /* margin-right: auto; */
+  }
+}
+
+@media (max-width: 900px) {
+  .container {
+    width: 80%;
+
+    /* margin-top: 10%; */
+    /* margin-left: auto; */
+    /* margin-right: auto; */
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 85%;
+
+    margin-top: 10%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 700px) {
+  .container {
+    width: 90%;
+
+    /* margin-top: 10%; */
+    /* margin-left: auto; */
+    /* margin-right: auto; */
+  }
+}
+
+@media (max-width: 640px) {
+  .container {
+    width: 85%;
+    padding: 30px 10px;
+    margin-top: 30px;
+    padding-left: 0;
+  }
+
+  .horizontalField {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    row-gap: 10px;
+    width: 100%;
+    padding-top: 40px;
+  }
 
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* flex-wrap: wrap; */
+  .name_div {
+    width: 98%;
+  }
 
-    /* row-gap: 15px; */
+  .email_dev {
+    width: 98%;
+  }
+
+  .button_div {
+    margin-top: 15px;
+    width: 70%;
+    height: 100%;
+  }
+  .button {
+    height: 36px;
+  }
+}
+
+@media (max-width: 500px) {
+  .container {
+    width: 90%;
   }
   .horizontalField {
-    width: 70%;
-  }
-  .formSubmit {
-    order: 1;
+    padding-top: 30px;
   }
 }
