--- a/CSS Flexbox на каждый день/18. Горизонтальная форма CF7/style.css
+++ b/CSS Flexbox на каждый день/18. Горизонтальная форма CF7/style.css
@@ -60,20 +60,28 @@
 @media (max-width: 1024px) {
   .container {
     width: 80%;
-
-    /* margin-top: 10%; */
-    /* margin-left: auto; */
-    /* margin-right: auto; */
   }
 }
 
 @media (max-width: 900px) {
   .container {
     width: 80%;
+  }
+  .horizontalField {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 10px;
+    width: 100%;
+    padding-top: 40px;
+  }
 
-    /* margin-top: 10%; */
-    /* margin-left: auto; */
-    /* margin-right: auto; */
+  .name_div {
+    width: 70%;
+  }
+
+  .email_dev {
+    width: 70%;
   }
 }
 
@@ -85,15 +93,19 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .name_div {
+    width: 70%;
+  }
+
+  .email_dev {
+    width: 70%;
+  }
 }
 
 @media (max-width: 700px) {
   .container {
     width: 90%;
-
-    /* margin-top: 10%; */
-    /* margin-left: auto; */
-    /* margin-right: auto; */
   }
 }
 
@@ -105,21 +117,12 @@
     padding-left: 0;
   }
 
-  .horizontalField {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 10px;
-    width: 100%;
-    padding-top: 40px;
-  }
-
   .name_div {
-    width: 98%;
+    width: 95%;
   }
 
   .email_dev {
-    width: 98%;
+    width: 95%;
   }
 
   .button_div {
