--- a/CSS на каждый день/08. Позиционирование/03. передний или на задний план z-index/style.css
+++ b/CSS на каждый день/08. Позиционирование/03. передний или на задний план z-index/style.css
@@ -86,6 +86,22 @@ article {
   padding: 40px 40px 40px 0px;
 }
 
+.div_blok_img {
+  position: relative;
+}
+
+.div_blok_img .img_1,
+.div_blok_img .img_2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.div_blok_img .img_2 {
+  z-index: 1;
+  margin-left: 50px;
+}
+
 .div_but {
   position: absolute;
   top: 100px;
