--- a/CSS на каждый день/09.Работа с фоном объектов/01. Изменить цвет фона — background-color/style.css
+++ b/CSS на каждый день/09.Работа с фоном объектов/01. Изменить цвет фона — background-color/style.css
@@ -11,7 +11,7 @@ body {
 header {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   height: 70px;
-  z-index: 1;
+  z-index: 3;
   position: fixed;
   width: 100%;
   background-color: #fff;
@@ -96,10 +96,15 @@ article {
   top: 0;
   left: 0;
 }
+.div_blok_img .img_3 {
+  width: 200px;
+  height: 200px;
+  background-color: aqua;
+}
 
 .div_blok_img .img_2 {
   z-index: 1;
-  margin-left: 50px;
+  margin-left: 450px;
 }
 
 .div_but {
