--- a/CSS на каждый день/09.Работа с фоном объектов/02. backdrop-filter— Размытый фон, эффект стекла/style.css
+++ b/CSS на каждый день/09.Работа с фоном объектов/02. backdrop-filter— Размытый фон, эффект стекла/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .d-flex {
-  display: flex; /* создаль отдельный класс .d-flex поместили display: flex; и распихали там где это надо */
+  display: flex; /* создать отдельный класс .d-flex поместили display: flex; и распихали там где это надо */
 }
 
 header {
